--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,220 @@
-.App {
-  text-align: center;
+.navbar {
+	padding: 0;
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	background-color: #333;
+	/* position: fixed; */
+	/* top: 5%%; */
+	width: 100%;
+	text-decoration: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#movie-nav {
+	border-right: 1px solid #bbb;
+	width: 50%;
+	text-decoration: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
-  }
+#series-nav {
+	border-right: 1px solid #bbb;
+	width: 50%;
+	text-decoration: none;
 }
 
-.App-header {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+#series-nav a {
+	display: block;
+	color: white;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
 }
 
-.App-link {
-  color: rgb(112, 76, 182);
+#movie-nav a {
+	display: block;
+	color: white;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
 }
 
-@keyframes App-logo-float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(10px)
-  }
-  100% {
-    transform: translateY(0px)
-  }
+#movie-nav a:hover {
+	background-color: rgb(114, 111, 111);
+	color: white;
+	text-decoration: none;
+}
+
+#series-nav a:hover {
+	background-color: rgb(114, 111, 111);
+	color: white;
+	text-decoration: none;
+}
+
+.active {
+	background-color: #4caf50;
+}
+
+#search-bar {
+	display: block;
+	width: 50%;
+	margin: 0 auto;
+	display: block;
+}
+
+#head-search {
+	background-color: rgb(15, 15, 15);
+}
+form.search input[type="text"] {
+	padding: 10px;
+	font-size: 17px;
+	border: 1px solid grey;
+	width: 95%;
+	background: #f1f1f1;
+}
+
+form.search button {
+	width: 5%;
+	padding: 10px;
+	background: #111518;
+	color: white;
+	font-size: 17px;
+	border: 1px solid grey;
+	border-left: none; /* Prevent double borders */
+	cursor: pointer;
+	/* position: fixed;
+	top: 0%; */
+}
+
+.myDiv {
+	display: flex;
+	flex-direction: column;
+}
+
+.filter-sort-dropbtn {
+	background-color: rgb(137, 138, 136);
+	color: white;
+	padding: 18px;
+	font-size: 16px;
+	border: none;
+	cursor: pointer;
+}
+
+.filter-sort-dropbtn:hover,
+.filter-sort-dropbtn:focus {
+	background-color: #444744;
+}
+
+/* Style the dropdown content (hidden by default) */
+.filter-sort-dropbtn-content {
+	display: none;
+	position: absolute;
+	background-color: #f9f9f9;
+	min-width: 160px;
+	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+	z-index: 1;
+}
+
+/* #language-filter,
+#genre-filter {
+	margin-left: 15%;
+	width: 10%;
+} */
+
+/* .filter {
+	position: absolute;
+	color: #ebf7ec;
+	background-color: #555252;
+	min-width: 130px;
+	border: 1px solid #ddd;
+	z-index: 1;
+	padding-left: 5px;
+	padding-top: 2px;
+	text-decoration: none;
+} */
+
+.filterSort {
+	float: right;
+	margin-right: 20px;
+}
+.select-selected:after {
+	position: absolute;
+	content: "";
+	top: 14px;
+	right: 10px;
+	width: 0;
+	height: 0;
+	border: 6px solid transparent;
+	border-color: #fff transparent transparent transparent;
+}
+
+.row {
+	display: flex;
+	flex-wrap: wrap;
+	padding: 0 4px;
+}
+
+/* Create four equal columns that sits next to each other */
+.column {
+	flex: 20%;
+	max-width: 20%;
+	padding: 0 4px;
+	/* margin-left: 10%;
+	margin-right: 10%; */
+}
+
+.column img {
+	margin-top: 8px;
+	vertical-align: middle;
+	height: 85%;
+	width: 100%;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+	.column {
+		flex: 50%;
+		max-width: 50%;
+	}
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+	.column {
+		flex: 100%;
+		max-width: 100%;
+	}
+}
+
+/* Movie Title styling */
+#movie-heading {
+	text-align: center;
+}
+
+/* Heading style */
+
+.heading {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+		"Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+	text-align: center;
+	color: #f1f1f1;
+	height: 150px;
+	background-attachment: fixed;
+}
+
+.selectedTab {
+	background-color: rgb(114, 111, 111);
+}
+
+.fixed {
+	position: fixed;
+	width: 100%;
+}
+
+.movable {
+	padding-top: 320px;
 }
